[project]
name = "ywlp"
version = "1.0.0"
description = "Parses Yellow pages"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "termcolor",
    "structlog",
    "rich",
    "click-repl",
    "playwright",
    "platformdirs",
    "lxml"

]

[project.scripts]
ywlp_restaurants = "ywlp:find_restaurants_in_city"


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
